--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,16 @@
         	<artifactId>cqrs</artifactId>
         	<version>0.0.1-SNAPSHOT</version>
         </dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.0.2.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator-annotation-processor</artifactId>
+			<version>6.0.2.Final</version>
+		</dependency>
 	</dependencies>
 
 
