--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: java
 sudo: false
 dist: trusty
-
+cache:
+  directories:
+  - $HOME/.m2
 # Specify which branches/tags that we do not want to be built: r5.0.0-M5
 branches:
   except:
