--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ dist: trusty
 cache:
   directories:
     - $HOME/.m2
+    - $HOME/.m2/repository
 # Specify which branches/tags that we do not want to be built: r5.0.0-M5
 branches:
   except:
@@ -26,4 +27,4 @@ matrix:
 # Java 11 "Oracle JDK"
     - env: JDK='Oracle JDK 11'
       install: . ./install-jdk.sh -F 11 -L BCL
-script: mvn -nsu clean verify compile
+script: mvn -Dmaven.repo.local=$HOME/.m2/repository -nsu clean verify compile install
