--- a/pom.xml
+++ b/pom.xml
@@ -45,8 +45,6 @@
             <groupId>eu.jankowskirobert</groupId>
             <artifactId>cqrs</artifactId>
             <version>0.0.1-SNAPSHOT</version>
-            <type>jar</type>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.hibernate.validator</groupId>
@@ -80,6 +78,15 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.15</version>
+                <configuration>
+                    <forkMode>never</forkMode>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
@@ -116,6 +123,16 @@
 
         </plugins>
     </build>
+    <repositories>
+        <repository>
+            <id>maven-repository</id>
+            <url>file:///${env.M2_HOME}/repository</url>
+        </repository>
+        <repository>
+            <id>localrepository</id>
+            <url>file:///${env.M2_HOME}/repository</url>
+        </repository>
+    </repositories>
     <reporting>
         <plugins>
             <plugin>
