Docker ES for CI

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=eeeeeeeeeeeeeeeee
 spring.data.elasticsearch.repositories.enabled=true
 spring.data.elasticsearch.cluster-name=elasticsearch
 spring.data.elasticsearch.cluster-nodes=localhost:9300
-logging.level.root=debug
+logging.level.root=error
 
 # H2
 spring.h2.console.enabled=true
