--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: java
-sudo: false
+sudo: required
+services:
+  - docker
 dist: trusty
+env:
+  DOCKER_COMPOSE_VERSION: 1.8.0
 cache:
   directories:
     - $HOME/.m2
@@ -11,6 +15,11 @@ branches:
     - /^r\d.*$/
 
 before_install:
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
+  - docker-compose -v
+  - docker -v
 # Get latest install-jdk.sh script
   - wget https://github.com/sormuras/bach/raw/master/install-jdk.sh
 # https://github.com/travis-ci/travis-ci/issues/8408
@@ -27,4 +36,7 @@ matrix:
 # Java 11 "Oracle JDK"
     - env: JDK='Oracle JDK 11'
       install: . ./install-jdk.sh -F 11 -L BCL
-script: mvn -Dmaven.repo.local=$HOME/.m2/repository -nsu clean verify compile install
+script:
+  - docker-compose -f docker-compose.yml up -d
+  - docker-compose -f docker-compose.yml ps
+  - mvn -Dmaven.repo.local=$HOME/.m2/repository -nsu clean verify compile install
