--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ branches:
     - /^r\d.*$/
 
 before_install:
-  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
-  - chmod +x docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/1.22.0-rc1/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose
+  - chmod +x /usr/local/bin/docker-compose
   - sudo mv docker-compose /usr/local/bin
   - docker-compose -v
   - docker -v
