--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,24 @@
 language: java
 sudo: required
-services:
-  - docker
+
 dist: trusty
 env:
   DOCKER_COMPOSE_VERSION: 1.21.2
+services:
+   - docker
 cache:
   directories:
-    - $HOME/.m2
-    - $HOME/.m2/repository
+  - $HOME/.m2
+  - $HOME/.m2/repository
 # Specify which branches/tags that we do not want to be built: r5.0.0-M5
 branches:
   except:
-    - /^r\d.*$/
+  - /^r\d.*$/
 
 before_install:
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
-  - sudo mv docker-compose /usr/local/bin
+  - sudo mv docker-compose /usr/local/bin/docker-compose
   - docker-compose -v
   - docker -v
 # Get latest install-jdk.sh script
