--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile group: 'org.hibernate.validator', name: 'hibernate-validator', version:'6.0.2.Final'
     compile group: 'org.hibernate.validator', name: 'hibernate-validator-annotation-processor', version:'6.0.2.Final'
     compile 'org.springframework.data:spring-data-elasticsearch:3.0.8.RELEASE'
+    compile 'org.springframework.amqp:spring-rabbit:2.0.4.RELEASE'
     testCompile group: 'junit', name: 'junit', version:'4.12'
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version:'2.0.2.RELEASE'
     compileOnly group: 'org.projectlombok', name: 'lombok', version:'1.16.20'
