--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,21 @@
-elasticsearch_master:
-      image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.3.0
-      command: "elasticsearch -Ecluster.name=elasticsearch -Enode.master=true"
-      environment:
-         - ES_HEAP_SIZE=512m
-      ports:
-        - "9200:9200"
-        - "9300:9300"
+version: '2'
+services:
+  elasticsearch_master:
+        image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.3.0
+        command: "elasticsearch -Ecluster.name=elasticsearch -Enode.master=true"
+        environment:
+          - ES_HEAP_SIZE=512m
+        ports:
+          - "9200:9200"
+          - "9300:9300"
+  mongodb:
+        image: mongo:latest
+        container_name: "mongodb"
+        environment:
+          - MONGO_DATA_DIR=/data/db
+          - MONGO_LOG_DIR=/dev/null
+        volumes:
+          - ./data/db:/data/db
+        ports:
+          - 27017:27017
+        command: "mongod --smallfiles --logpath=/dev/null" # --quiet
